# postgresql-mcp-server

./: .gitignore  README.md  pyproject.toml
src/postgresql_mcp_server/: __init__.py
