[project]
name = "postgresql-mcp-server"
version = "0.1.0"
description = "A PostgreSQL MCP server for AI agents - query databases, list tables, and explore schemas"
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["ai", "mcp", "postgresql", "database", "mcp-server", "llm", "opencode"]
authors = [
    { name = "suncreation", email = "cake0103@nate.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/suncreation/postgresql-mcp-server"
"Repository" = "https://github.com/suncreation/postgresql-mcp-server"

[project.scripts]
postgresql-mcp-server = "postgresql_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgresql_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
